--- a/VCT.Server/styles.scss
+++ b/VCT.Server/styles.scss
@@ -4,6 +4,226 @@ $reject: #F44336;
 
 $button-size: 40px;
 
+html {
+            width: 100%;
+            height: 100%;
+}
+
+body {
+            display: flex;
+            background-color: #ebebeb;
+            flex-direction: column;
+            width: 100%;
+            height: 100% !important;
+            line-height: initial;
+}
+
+.rowParent, .columnParent{
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-box-direction: normal;
+            -webkit-box-orient: horizontal;
+            -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+            flex-direction: row;
+            -webkit-flex-wrap: nowrap;
+            -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
+            -webkit-box-pack: start;
+            -webkit-justify-content: flex-start;
+            -ms-flex-pack: start;
+            justify-content: flex-start;
+            -webkit-align-content: stretch;
+            -ms-flex-line-pack: stretch;
+            align-content: stretch;
+            -webkit-box-align: stretch;
+            -webkit-align-items: stretch;
+            -ms-flex-align: stretch;
+            align-items: stretch;
+        }
+        
+        .rowParent {
+            width: 100%;
+            
+        }
+
+        .columnParent {
+            -webkit-box-orient: vertical;
+            -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+            flex-direction: column;
+        }
+
+        .flexChild {
+            -webkit-box-flex: 1;
+            -webkit-flex: 1;
+            -ms-flex: 1;
+            flex: 1;
+            -webkit-align-self: auto;
+            -ms-flex-item-align: auto;
+            align-self: auto;
+            overflow: auto;
+            position: relative;
+        }
+        
+        .flexChild > img {
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+
+
+        nav {
+            -webkit-box-flex: 0;
+            -webkit-flex: 0 0 auto;
+            -ms-flex: 0 0 auto;
+            flex: 0 0 auto; height: 50px;
+        }
+        
+        .navbar.history {
+            border-radius: 0;
+            margin-bottom: 0;
+            border: 0;
+            background-color: #3F51B5;
+        }
+        
+        .navbar-right{
+            margin: 0
+        }
+        
+        .navbar {
+            margin-bottom: 0;
+        }
+        
+        .navbar-default.history .navbar-text {
+            color: white;
+        }
+
+        .navbar-default{
+            border: 0;
+        }
+        
+        .stat .title {
+            display: block;
+            height: 30px;
+            line-height: 30px;
+            text-transform: uppercase;
+            text-align: center;
+            margin: 0;
+        }
+        
+        .stat .amount {
+            display: block;
+            height: 50px;
+            line-height: 40px;
+            text-transform: uppercase;
+            text-align: center;
+            font-size: 32px;
+            margin: 0;            
+        }
+        
+        .stat.passed {
+            color: $accept;
+        }
+        
+        .stat.suites .amount {
+            color: $accept;
+        }
+
+        .passed {
+            color: $accept
+        }
+        
+        .failed {
+            color: $reject;
+        }
+        
+        .stat.failed {
+            color: $reject;
+        }
+                
+        .info .title {
+            display: block;
+            height: 30px;
+            line-height: 30px;
+            text-transform: uppercase;
+            margin: 0;
+        }
+        
+        .info .details {
+            display: block;
+            height: 40px;
+            line-height: 20px;
+            text-transform: uppercase;
+            margin: 0, 5px, 0, 0;
+            opacity: 0.7;        
+        }
+        
+        a.run {
+            background-color: #fefefe;
+        }
+        
+        a.run:hover {
+            background-color: #f5f5f5;
+        }
+        
+        .row {
+            margin-right: 0;
+            margin-left: 0;
+        }
+        
+        .history-items {
+            line-height: initial;
+        }
+        
+        .history-items > div {
+            padding: 0;
+        }
+        
+        .history-items > div table th {
+            background-color: #303f9f;
+            line-height: 40px;
+            height: 40px;
+            padding: 0 0 0 10px;
+            font-weight: normal;
+            color: white;
+            margin: 0;
+            border: 0;
+        }
+        
+        .history-items > div table tr:hover {
+            background-color: #c5cae9;
+            cursor: pointer;
+        }
+        
+        .history-items > div table tr td {
+            padding: 0 10px;
+            height: 40px;
+            line-height: 40px;
+            border: 0;
+        }
+        
+        
+        .navbar .container-fluid {
+            padding: 0;
+        }
+        
+        .navbar .navbar-text.icon {
+            width: 50px;
+            height: 50px;
+            margin: 0;
+            line-height: 49px;
+            font-size: 30px;
+            text-align: center;
+        }
+        
+        .navbar .navbar-text.title {
+            margin-left: 0;
+            font-size: 16px;
+        }
+
 .preview {
 
     .control-panel {
@@ -31,8 +251,6 @@ $button-size: 40px;
             text-align: center;
 
         color: #444;
-            
-            
         }
 
         > div {
